[package]
name = "mwax_stats"
version = "0.1.6"
readme = "README.md"
homepage = "https://github.com/MWATelescope/mwax_stats"
repository = "https://github.com/MWATelescope/mwax_stats"
authors = [    
    "Greg Sleap <greg.sleap@curtin.edu.au>"
]
edition = "2021"
license = "MPL-2.0"
keywords = ["radioastronomy", "mwa", "astronomy", "mwalib"]
categories = ["science"]
exclude = ["tests/*", ".vscode/*", ".github/*"]

[dependencies]
clap = "2.*"
env_logger = "0.9.*"
file-utils = "0.1.5"
log = "0.4.*"
mwalib = "0.14.*"
birli = { version = "0.6.4", default_features = false }

[patch.crates-io]
mwalib = { git = "https://github.com/MWATelescope/mwalib", branch = "digital_gains_plus" }
birli = { git = "https://github.com/MWATelescope/Birli", branch = "v0.7.0" }
marlu = { git = "https://github.com/MWATelescope/Marlu", branch = "v0.7.0" }
