[package]
name = "mwax_stats"
version = "0.4.2"
readme = "README.md"
homepage = "https://github.com/MWATelescope/mwax_stats"
repository = "https://github.com/MWATelescope/mwax_stats"
authors = [    
    "Greg Sleap <greg.sleap@curtin.edu.au>"
]
edition = "2021"
license = "MPL-2.0"
keywords = ["radioastronomy", "mwa", "astronomy", "mwalib"]
categories = ["science"]
exclude = ["tests/*", ".vscode/*", ".github/*"]

[[bin]]
name = "mwax_stats"
path = "src/mwax_stats.rs"

[[bin]]
name = "mwax_packet_stats"
path = "src/mwax_packet_stats.rs"

[dependencies]
anyhow = "1.0.97"
clap = "2.*"
env_logger = "0.11.*"
file-utils = "0.1.*"
gethostname = "1.0.0"
log = "0.4.*"
rayon = "1.10"
ndarray = { version = "~0.16" }
mwalib = { version = "1.8.7", features = ["cfitsio-static"] }
birli = { version = "0.18.2", features = ["cfitsio-static"] }
